--- a/jp/logistic-regression-6.qmd
+++ b/jp/logistic-regression-6.qmd
@@ -44,11 +44,11 @@ Keywords: confounding & collapsibility, effect measure, observational study, R s
 :::
 
 ::: voice-daughter
-私「賛成。いちご大福あるから持ってくる」
+私「賛成。いちご大福あるから、とってくる」
 ::: 
 
 ::: voice-father
-お父さん「疫学では有名な話なんだけどね。40年前に、"コーヒーを飲むと膵がんリスクが上がる"という論文がでたことがあった」
+お父さん「疫学では有名な話なんだけどね。40年前に、"コーヒーを飲むと膵がんリスクが上がる"という論文が出たことがあった」
 ::: 
 
 ::: voice-daughter
@@ -98,16 +98,16 @@ Keywords: confounding & collapsibility, effect measure, observational study, R s
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。これが疫学でいう交絡因子。交絡調整の意味は数字で示すと一番早い。**Simpsonのパラドックス**っていう現象を使って説明しよう」
+お父さん「そういうこと。これが疫学でいう交絡因子。交絡調整がなにしているかは、数字をみるのが一番早い。**Simpsonのパラドックス**っていう現象を使って説明しよう」
 :::
 :::::::::::::::::::::::::::::::::
 
 
 ::: {.callout-note appearance="simple" title="Simpsonのパラドックス"}
 
-コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのか、一番シンプルな層別解析でみてみましょう。表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを意味しています。
+コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのか、一番シンプルな層別解析でみてみましょう。表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、（未調整の）オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを示唆しているようにみえます。
 
-表2には、交絡因子（喫煙）によって対象者を層別した結果が示されています。ここから膵がんのオッズ比を求めるとどうなるでしょうか。コーヒー摂取でも非摂取でもリスクは同じですよね。つまりオッズ比は1倍です。
+表2には、交絡因子（喫煙）によって対象者を層別した結果が示されています。ここから膵がんのオッズ比を求めるとどうなるでしょうか。層ごとの結果ではコーヒー摂取でも非摂取でもリスクは同じですよね。つまりオッズ比は1倍です。
 
 このように、調整前後で、関連の程度が変わる現象を、Simpsonのパラドックスといいます（Simpson 1951）。
 
@@ -138,11 +138,11 @@ Keywords: confounding & collapsibility, effect measure, observational study, R s
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「単純な解析ではリスク因子だったのに、層別しただけで関連が消えた。でもこれは“計算上のトリック”じゃないよね？以前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたのは関係ある？」
+私「単純な解析ではリスク因子だったのに、層別しただけで関連が消えた。でもこれは計算のトリックじゃないよね？以前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたのは関係ある？」
 ::: 
 
 ::: voice-father
-お父さん「さすが、覚えていたね。でもここは区別しないといけない。確かにオッズ比はリスク比と違って、層別したら値が変わりやすい、**併合可能ではない（non-collapsible）**指標だよ。でもこれは指標の性質の話。ここで問題しているSimpsonのパラドックスは、"比較の仕方が壊れている"話なんだ」
+お父さん「さすが、覚えていたね。でもここは区別しないといけない。確かにオッズ比はリスク比と違って、層別したら値が変わりやすい、**併合可能ではない（non-collapsible）**指標だよ。でもこれは指標の性質の話。ここで問題しているSimpsonのパラドックスは、"比較の土台"が壊れている話なんだ」
 :::
 
 ::: voice-daughter
@@ -220,7 +220,7 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「じゃあ、その次になにが起きたか整理しよう。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。これはいいよね」
+お父さん「じゃあ、その次になにが起きたか整理しよう。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。OK？」
 ::: 
 
 ::: voice-daughter
@@ -232,7 +232,7 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-daughter
-私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」
+私「コーヒー摂取割合ね。層別前は30%。喫煙者では78%、非喫煙者では11%だよ」
 ::: 
 
 ::: voice-father
@@ -244,22 +244,20 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「Simpsonのパラドックスのポイントは、3つの変数の相関関係なんだ。2つの条件が揃うとSimpsonのパラドックスが起きる。正確にいうと、これは十分条件で必要条件じゃないんだけどね（田中2022）」
+お父さん「Simpsonのパラドックスのポイントは、3つの変数の相関関係なんだ。2つの条件が揃うとSimpsonのパラドックスが起きやすい（厳密には十分条件で必要条件ではない）」
 ::: 
 
 - 第3の因子と曝露の間に相関がある
 - 第3の因子とアウトカムの間に相関がある
 
 ::: voice-daughter
-私「曝露とアウトカムと第3の変数の関係性ねえ。ちょっと確認させて。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か。確かにそうなる。交絡の話ってまあまあややこしいね」
+私「曝露とアウトカムと第3の変数の関係性ねえ。ちょっと確認させて。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か。確かにそうなる。交絡の話って、ややこしいね」
 ::: 
 :::::::::::::::::::::::::::::::::
 
 ### 文献
 
 - Simpson EH. The interpretation of interaction in contingency tables. J Royal Stat Soc B 1951;13:238-41
-
-- [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
 ### This concludes the Adjusting for Bias series. If you’d like to keep reading over your next cup of coffee, the following episode is waiting:
 
