--- a/jp/truth-1.qmd
+++ b/jp/truth-1.qmd
@@ -100,7 +100,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「真値が見えない状況では、**ただのオッズ比とロジスティック回帰で調整したオッズ比のどちらが真実に近いかなんていえない**ってことだよ。データとは別に、手がかりになるような知識や概念が必要だって思わない？」
+お父さん「真値が見えない状況では、**ただのオッズ比と調整したオッズ比のどちらが真実に近いかなんていえない**ってことだよ。データとは別に、手がかりになるような知識や概念が必要だって思わない？」
 ::: 
 
 ::: voice-daughter
@@ -108,15 +108,15 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「気持ちはわかるけど、もうちょっとつきあって。この**Simpsonのパラドックスは、交絡という現象と同じもの**だと思ってない？」
+お父さん「気持ちはわかるけど、もうちょっとつきあって。この**Simpsonのパラドックスは、交絡という現象そのもの**だと思ってない？」
 ::: 
 
 ::: voice-daughter
-私「え？調整したらバイアスが消えるんだよね？そうじゃないの？」
+私「え？調整したらバイアスが消えるんだよね。そうじゃないの？」
 ::: 
 
 ::: voice-father
-お父さん「いや、数学的には異なる現象なんだ。交絡はそんなに単純な問題じゃない。直感的な説明をするとね。層別前の解析は集団全体のオッズ比でしょ」
+お父さん「いや、そこは別物なんだ。交絡はそんなに単純な問題じゃない。直感的な説明をするとね。層別前の解析は集団全体のオッズ比でしょ」
 ::: 
 
 ::: voice-daughter
@@ -132,7 +132,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「うん。この事例でいえば喫煙が交絡因子なのは間違いないんだよ。でも一般には、層別前と層別後のどっちのオッズ比が真値なのか、統計学の枠組みで決めるロジックはないんだ。もちろん、Simpsonのパラドックスは数字のパズルではないし、どっちの解析が正しいかという命題も言葉遊びじゃない。データと真値の関係をどう認識するかに関わる問題なんだ。専門家以外のほとんどが、両者の関係性を真逆にとらえている。そろそろ本当のことを話そう」
+お父さん「うん。この事例でいえば喫煙が交絡因子なのは間違いないんだよ。でも一般には、層別前と層別後のどっちのオッズ比が真値なのか、統計学の枠組みで決めるロジックはないんだ。もちろん、Simpsonのパラドックスは数字のパズルではないし、どっちの解析が正しいかという命題も言葉遊びじゃない。データと真値の関係をどう認識するかに関わる問題なんだ。専門家以外のほとんどが、ここを逆にとらえてしまう。そろそろ本当のことを話そう」
 :::
 ::::::::::::::::::::::::::::::::: 
 
