--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -28,7 +28,15 @@ Keywords: causal model, language & writing, probability model, research hypothes
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「今から、"交絡調整"の意味を知るために必要な概念について話すね。これまでの例を思い出してごらん。胃がん手術の術式、ストーマ造設、コーヒー摂取、どれも知りたいのは別の選択をしていたら結果はどうなったかってことじゃない？別の術式だったら助かっていたか、とか」
+お父さん「今から、"交絡調整"の意味を知るために必要な概念について話すね」
+::: 
+
+::: voice-daughter
+私「うん。コーヒーお代わり」
+::: 
+
+::: voice-father
+お父さん「これまでの例を思い出してごらん。胃がん手術の術式、ストーマ造設、コーヒー摂取、どれも知りたいのは別の選択をしていたら結果はどうなっていたかってことじゃない？別の術式だったら助かっていたか、とか」
 :::
 
 ::: voice-daughter
@@ -36,7 +44,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「残念ながら回帰分析のレールに乗ったままでは、その真実にはたどり着けない。確率モデルではなく**原因を変えたら結果はどうなっていたか**という疑問からスタートすること。因果推論はその問いに答えるための方法論なんだ」
+お父さん「正直にいうと回帰分析のレールに乗ったままでは、その真実にはたどり着けない。出発点を変える。確率モデルではなく**原因を変えたら結果はどうなっていたか**という疑問からスタートすること。因果推論はその問いに答えるための方法論なんだ」
 ::: 
 
 ::: voice-daughter
@@ -44,7 +52,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「ちがうちがう、今は抽象的な話をしている。たとえば実薬とプラセボを比較するランダム化臨床試験だったらどう？全員に実薬を投与した結果とプラセボを投与した結果の差が知りたいんじゃない？それがOSなら生存曲線の差になる。この差こそが**因果効果**なんだ」
+お父さん「ちがうちがう、今してるのは抽象的な話なんだ。たとえば実薬とプラセボを比較するランダム化臨床試験だったらどう？全員に実薬を投与した結果とプラセボを投与した結果の差が知りたいんじゃない？それがOSなら生存曲線の差になる。この差こそが**因果効果**なんだ」
 ::: 
 
 ::: voice-daughter
@@ -60,7 +68,15 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「そうじゃない。どんな因果効果が知りたいかを定義して、それを推定するためにデータを集める。眼に見えるのは、6つあるルービックキューブの面の1つに過ぎない。別の面に潜在結果変数が描かれていたとしても観測できないんだ。でも同じ構造をもつルービックキューブをたくさん用意して、それぞれをランダムな向きで机の上に並べてごらん。どのキューブも一面しか見えないけれど、どんな絵が描かれているか推測することはできる。ランダム化臨床試験がやっているのはこれに似ている」
+お父さん「そうじゃない。どんな因果効果が知りたいかを定義して、それを推定するためにデータを集める」
+::: 
+
+::: voice-daughter
+私「そうじゃないのか」
+::: 
+
+::: voice-father
+お父さん「たとえるなら、6つあるルービックキューブの面の1つしか見えないようなもの。別の面に潜在結果変数が描かれていたとしても観測できないんだ。でも同じ構造をもつルービックキューブをたくさん用意して、それぞれをランダムな向きで机の上に並べてごらん。どのキューブも一面しか見えないけれど、どんな絵が描かれているかを推し量ることはできる。ランダム化臨床試験がやっているのはこれに似ている」
 ::: 
 
 ::: voice-daughter
@@ -68,7 +84,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「一番の違いははっきりしている。ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査のような観察研究では、研究仮説やPECOをどんなに慎重に考えても、曖昧なところは残る。特にPatientsとControlsがね。比較可能性についても、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
+お父さん「一番の違いはひとつ。ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査のような観察研究では、研究仮説やPECOをどんなに慎重に考えても、曖昧なところは残る。特にPatientsとControlsがね。比較可能性についても、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
 ::: 
 
 ::: voice-daughter
@@ -88,7 +104,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 :::
 
 ::: voice-father
-お父さん「ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、確率モデルと因果モデルは"二階建て"になっている」
+お父さん「ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、確率モデルと因果モデルは二階建てなんだ」
 :::
 
 - 確率モデル: 観測されたデータがどう生じるかを記述する構造
@@ -111,11 +127,19 @@ Keywords: causal model, language & writing, probability model, research hypothes
 :::
 
 ::: voice-father
-お父さん「ふむ。もう少し説明が必要だね。ロジスティック回帰や層別解析を使っちゃいけないわけじゃない。それは方法なんだ。ルービックキューブの解き方みたいなもの。ルービックキューブの構造とは別物。ここで知ってほしかったのは、回帰係数やオッズ比を、因果関係を考えるための証拠として正しく解釈するためには、因果モデルが必要だってこと」
+お父さん「ふむ。もう少し説明が必要だね。ロジスティック回帰や層別解析を使っちゃいけないわけじゃない。それは方法なんだ。ルービックキューブの解き方みたいなもの。ルービックキューブの構造とは別物」
 :::
 
 ::: voice-daughter
-私「お父さんは専門だからわかってないけど、私にとってはロジスティック回帰もRubin因果モデルも初めて聞く概念なんだよ。Rubin因果モデルって、ある患者に別の方法で治療したら結果はどうなっていたかを分析すればいいんでしょ？それって解剖・病態生理・薬理に関する基礎知識と臨床経験を組み合わせればできそうなことじゃない？」
+私「べつもの」
+:::
+
+::: voice-father
+お父さん「ここで知ってほしかったのは、回帰係数やオッズ比を、因果関係を考えるための証拠として正しく解釈するためには、因果モデルが必要だってこと」
+:::
+
+::: voice-daughter
+私「お父さんは専門だからわかってないけど、私にとってはロジスティック回帰もRubin因果モデルも初めて聞く概念なんだよ。絶賛こんがらがり中だわ。Rubin因果モデルって、ある患者に別の方法で治療したら結果はどうなっていたかを分析すればいいんでしょ？それって解剖・病態生理・薬理に関する基礎知識と臨床経験を組み合わせればできそうなことじゃない？」
 :::
 
 ::: voice-father
