--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -192,7 +192,7 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 ::: 
 
 ::: voice-father
-お父さん「それはリスク差のモデルだね。無変換のモデルが悪いわけじゃないんだけど、ロジット関数が選ばれた理由はちゃんとある。この話はちょっと難しいかもしれない。たとえるならね、ロジスティック回帰はルービックキューブのように構造が安定しているんだ」
+お父さん「それはリスク差のモデルだね。そのモデルが悪いわけじゃないけど、ロジット関数が選ばれた理由はちゃんとある。この話はちょっと抽象的かもしれない。たとえるならね、ロジスティック回帰はルービックキューブのように構造が安定しているんだ」
 ::: 
 
 ::: voice-daughter
@@ -200,15 +200,31 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 ::: 
 
 ::: voice-father
-お父さん「操作を加えても構造が維持されるっていうこと。どんな方向で、どんな順序で面を回しても、ルービックキューブは元に戻せる。解けば絵の向きもきちんと揃う。統計解析に話を戻すと、人工的にデータに変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+お父さん「操作を加えても構造が維持されるっていうこと。どんな方向で、どんな順序で面を回しても、ルービックキューブは元に戻せる。解けば絵の向きもきちんと揃う。観測できるのは、ただの1面しかないんだけどね」
 ::: 
 
 ::: voice-daughter
-私「それはよくやることだよね」
+私「ロジスティック回帰とルービックキューブねえ」
 ::: 
 
 ::: voice-father
-お父さん「統計学者は、いろいろな回帰モデルのうち、変換に対して不変な構造はなにかって考えた。ここでいう変換は、**数学では群作用（group action）**っていうんだけど、ある変換を加えても意味が変わらない操作のこと。ほら、コインの表裏を入れ替えても、コイン投げの確率の本質に影響しないでしょ。考えた結果、2値アウトカムのモデルでは以下のパーツを使うしかないってことがわかった」
+お父さん「統計解析に話を戻そうか。人工的にデータに変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+::: 
+
+::: voice-daughter
+私「うんうん。それはよくやることだよね」
+::: 
+
+::: voice-father
+お父さん「統計学者は、いろいろな回帰モデルのうち、変換に対して不変な構造はなにかって考えた。ここでいう変換は、**数学では群作用（group action）**っていうんだけど、ある変換を加えても意味が変わらない操作のこと」
+:::
+
+::: voice-daughter
+私「出た。抽象。なんだそれ」
+::: 
+
+::: voice-father
+お父さん「ほら、コインの表裏を入れ替えてもコイン投げの確率は変わらない。ルービックキューブを回転しても構造は変わらない。考えた結果、2値アウトカムのモデルでは以下のパーツを使うしかないってことがわかった」
 ::: 
 
 - 確率分布: 2項分布（指数型分布族）
@@ -230,7 +246,7 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 :::
 
 ::: voice-daughter
-私「値が反転する、って？」
+私「なるほどね、そういう意味で可逆性っていってるのね。でも値が反転するってのがわかんないな。どういうこと？」
 :::
 
 ::: voice-father
@@ -240,11 +256,11 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 $$g(1−\pi)=−g(\pi)$$
 
 ::: voice-daughter
-私「へ？意味わかんない」
+私「へ？やっぱ意味わかんない」
 :::
 
 ::: voice-father
-お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクがどれくらい高いかを表す尺度なんだ。死亡と生存を入れ替えたらどうなる？$g(-1\pi)$は死亡リスクの低さを意味するよね。つまり、死亡と生存の入れ替えによって、符号反転はするはず」
+お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクがどれくらい高いかを表す尺度なんだ。死亡と生存を入れ替えたらどうなる？$g(-1\pi)$は死亡リスクの低さを意味するよね。つまり、死亡と生存の入れ替えによって、符号は反転するはず」
 :::
 
 ::: voice-daughter
@@ -300,7 +316,7 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 - [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
 ### 次のエピソードとRスクリプト
-- [From Risk to Logistic Regression](logistic-regression-2.html)
+- [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
 ::: {.callout-note appearance="simple" collapse="true" title="他のエピソードはこちら"}
