--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -241,7 +241,7 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 - [Frequentist Thinking I](frequentist-1.html)
 - [Frequentist Experiments I](frequentist-4.html)
 - [Effects and Time I](effects-1.html)
-- [Adjusting for Bias](logistic-regression-1.html)
+- [Adjusting for Bias I](logistic-regression-1.html)
 
 **用語集**
 
