--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -260,7 +260,7 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 - [Frequentist Thinking I](frequentist-1.html)
 - [Frequentist Experiments I](frequentist-4.html)
 - [Effects and Time I](effects-1.html)
-- [Adjusting for Bias](logistic-regression-1.html)
+- [Adjusting for Bias I](logistic-regression-1.html)
 
 **用語集**
 
