--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -169,11 +169,11 @@ Keywords: clinical trial, language & writing, p-value, survival & competing risk
 :::
 
 ::: voice-daughter
-私「...。ネガティブ試験でも価値が変わらないってことをいってるよね？」
+私「...ネガティブ試験でも価値が変わらないってことをいってるよね？」
 :::
 
 ::: voice-father
-お父さん「うん。たとえるならさ、臨床試験はペーパーテストと同じ"試験"ってことだよ。合格・不合格と試験成績という情報の価値は無関係でしょ。さっき話したp値に関する説明は、採点ルールや試験の"標準規格"みたいなもので避けて通れないんだ。...点数がすべてじゃないけどね」
+お父さん「うん。たとえるならさ、臨床試験はペーパーテストと同じ"試験"ってことだよ。合格・不合格と試験成績という情報の価値は無関係でしょ。さっき話したp値に関する説明は、採点ルールや試験の"標準規格"みたいなもので避けて通れないんだ。まあ、点数がすべてじゃないけどね」
 :::
 
 ::: voice-daughter
