--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -260,7 +260,7 @@ $$g(1−\pi)=−g(\pi)$$
 :::
 
 ::: voice-father
-お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクがどれくらい高いかを表す尺度なんだ。死亡と生存を入れ替えたらどうなる？$g(-1\pi)$は死亡リスクの低さを意味するよね。つまり、死亡と生存の入れ替えによって、符号は反転するはず」
+お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクがどれくらい高いかを表す尺度なんだ。死亡と生存を入れ替えたらどうなる？$g(1-\pi)$は死亡リスクの低さを意味するよね。つまり、死亡と生存の入れ替えによって、符号は反転するはず」
 :::
 
 ::: voice-daughter
@@ -268,7 +268,7 @@ $$g(1−\pi)=−g(\pi)$$
 :::
 
 ::: voice-father
-お父さん「もう少し条件がある。$g(\pi)$という尺度に、上限と下限があったら不便だし、ゼロという基準が必要だよね。だから条件を追加する」
+お父さん「もう少し条件がある。さっきいった共変量の変換でも関係性は維持されるっていう条件がそのひとつ。また、$g(\pi)$という尺度に、上限と下限があったら不便だし、ゼロという基準が必要だよね。だからさらに条件を追加する」
 :::
 
 - $g(1−\pi)=−g(\pi)$
