--- a/jp/publish-a-paper-4.qmd
+++ b/jp/publish-a-paper-4.qmd
@@ -57,7 +57,7 @@ date: 2025-12-13
 
 私たちは、よい診療をしてきたのだろうか。 問い方が変われば、返ってくる数字も変わる。 並んでいるだけに見える数字は、実は多くを語っている。そのことを今では知っている。患者さんを対象にした研究だからこそ、仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより、「よりよい技術に近づくための知識を得る」という態度に近い。
 
-たくさんのことが、仕事をしているときや、コーヒーを飲みながら人と話しているときには、通り過ぎてしまう。ひとりになると、それがよくわかる
+たくさんのことが、仕事をしているときや、コーヒーを飲みながら人と話しているときには、通り過ぎてしまう。ひとりになると、それがよくわかる。
 
 コーヒーは机の端で、静かに冷えていた。モニターには、書き上げたばかりのConclusionが映っている。調査をデザインしたときに抱いていた疑問に、答えられているか。ひとつひとつ確かめる。 
 
